--- a/public/scss/fullrecipe.scss
+++ b/public/scss/fullrecipe.scss
@@ -142,11 +142,12 @@
 		position: absolute;
 		font-size: 25px;
 		font-family: $font3;
+		letter-spacing: 5.0px;
 		color: #000;
 		writing-mode: vertical-rl;
 		transform: rotate(180deg);
-		top: 355px;
-		left: 300px;
+		top: 200px;
+		left: 190px;
 		width: 94px;
 		height: 347px;
 		text-align: left;
