--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -776,6 +776,7 @@ h1 .load-recipes {
   display: flex;
   align-items: center;
   justify-content: center;
+  cursor: pointer;
 }
 .your-box .your-image img {
   width: 300px;
@@ -784,11 +785,13 @@ h1 .load-recipes {
   background-size: cover;
   background-repeat: no-repeat;
   position: absolute;
+  cursor: pointer;
 }
 .your-box .view {
   width: 128px;
   height: 42px;
   z-index: 99;
+  cursor: pointer;
 }
 
 .your-description {
