--- a/public/scss/fullrecipe.scss
+++ b/public/scss/fullrecipe.scss
@@ -22,11 +22,13 @@
 		.fullrecipe-image {
 			width: 468px;
 			height: 422px;
-			background-image: url(../images/recipe-pizza.jpg);
+			background-color: rgba(242, 92, 84, .6);
 			background-position: center;
 			background-size: cover;
 			background-repeat: no-repeat;
 			opacity: 1;
+			background-image: url(../images/recipe-pizza.jpg);
+			// margin-top: 300px;
 
 			img {
 				width: 468px;
