--- a/public/scss/fullrecipe.scss
+++ b/public/scss/fullrecipe.scss
@@ -75,6 +75,7 @@
 	}
 	.ingredient-container {
 		width: 445px;
+		margin-left: 40px;
 		// margin-top: 50px;
 		font-family: $font3;
 
@@ -110,6 +111,7 @@
 	.instructions-container {
 		width: 445px;
 		margin-top: 66px;
+		margin-left: 40px;
 
 		.instruct-title {
 			font-family: $font3;
