--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -184,11 +184,11 @@ footer {
   align-items: center;
   justify-content: space-between;
   z-index: 99;
-  margin-bottom: 50px;
 }
 footer .footer-container {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   width: 1100px;
 }
 footer .footer-container .copyright {
@@ -206,6 +206,7 @@ footer .socials {
   width: 78px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   margin-right: 40px;
 }
 footer .socials .fbook {
@@ -224,6 +225,7 @@ footer .socials .insta {
 
 @media only screen and (max-width: 1240px) {
   footer .footer-container {
+    width: 1000px;
     min-height: 20px;
   }
   footer .footer-container .misc {
@@ -247,39 +249,65 @@ footer .socials .insta {
     flex-wrap: wrap;
   }
 }
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 850px) {
   footer {
     font-size: 10px;
     display: flex;
+    justify-content: space-between;
+    align-items: center;
     margin-left: 20px;
   }
   footer .footer-container {
-    width: 300px;
+    max-width: 600px;
     margin-bottom: 50px;
-    margin-left: 30px;
     min-height: 50px;
-    display: block;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
   footer .footer-container .copyright {
-    margin-left: 0;
-    margin-bottom: 10px;
+    max-width: 170px;
   }
   footer .footer-container .misc {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     min-height: 20px;
-    width: 400px;
+    max-width: 450px;
     flex-wrap: wrap;
-    padding-left: 80px;
-    padding-right: 80px;
     line-height: 20px;
   }
   footer .socials {
     width: 50px;
     margin-left: 30px;
-    margin-bottom: 100px;
+    margin-bottom: 50px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+  }
+}
+@media only screen and (max-width: 725px) {
+  footer .footer-container {
+    width: 320px;
+    display: block;
+    min-height: 60px;
+  }
+}
+@media only screen and (max-width: 540px) {
+  footer {
+    position: fixed;
+    padding-left: 50px;
+  }
+  footer .footer-container .copyright {
+    margin-bottom: 10px;
+  }
+  footer .footer-container .misc {
+    width: 320px;
+    min-height: 60px;
+  }
+  footer .socials {
+    position: absolute;
+    top: 0;
+    left: 240px;
   }
 }
 .home-content .home-hero {
