--- a/public/scss/footer.scss
+++ b/public/scss/footer.scss
@@ -1,5 +1,6 @@
 footer {
 	// position: absolute;
+	// width: 100%;
 	min-height: 60px;
 	margin-top: -70px;
 	// padding-bottom: 24px;
@@ -11,11 +12,15 @@ footer {
 	align-items: center;
 	justify-content: space-between;
 	z-index: 99;
-	margin-bottom: 50px;
+
+	// margin-bottom: 50px;
+	// padding-bottom: 50px;
 	.footer-container {
 		display: flex;
 		justify-content: space-between;
+		align-items: center;
 		width: 1100px;
+
 		.copyright {
 			width: 266px;
 			height: 18px;
@@ -32,6 +37,7 @@ footer {
 		width: 78px;
 		display: flex;
 		justify-content: space-between;
+		align-items: center;
 		margin-right: 40px;
 
 		.fbook {
@@ -54,6 +60,7 @@ footer {
 @media only screen and (max-width: 1240px) {
 	footer {
 		.footer-container {
+			width: 1000px;
 			min-height: 20px;
 			.misc {
 				width: 600px;
@@ -82,42 +89,78 @@ footer {
 	}
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 850px) {
 	footer {
 		font-size: 10px;
 		display: flex;
+		justify-content: space-between;
+		align-items: center;
 		margin-left: 20px;
+
 		.footer-container {
-			width: 300px;
+			max-width: 600px;
 			margin-bottom: 50px;
-			margin-left: 30px;
+			// margin-left: 30px;
 			min-height: 50px;
-			display: block;
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
 
 			.copyright {
-				margin-left: 0;
-				margin-bottom: 10px;
+				max-width: 170px;
+				// margin-bottom: 10px;
 			}
 			.misc {
 				display: flex;
-				justify-content: space-evenly;
+				justify-content: space-between;
 				min-height: 20px;
-				width: 400px;
+				max-width: 450px;
 				flex-wrap: wrap;
-				padding-left: 80px;
-				padding-right: 80px;
+				// padding-left: 80px;
+				// padding-right: 80px;
 				line-height: 20px;
 			}
 		}
 		.socials {
 			width: 50px;
 			margin-left: 30px;
-			margin-bottom: 100px;
+			margin-bottom: 50px;
 			display: flex;
 			justify-content: space-between;
+			align-items: center;
 		}
 	}
 }
 
-@media only screen and (max-width: 960px) {
+@media only screen and (max-width: 725px) {
+	footer {
+		.footer-container {
+			width: 320px;
+			display: block;
+			min-height: 60px;
+		}
+	}
+}
+
+@media only screen and (max-width: 540px) {
+	footer {
+		// margin-bottom: 0;
+		position: fixed;
+		padding-left: 50px;
+		.footer-container {
+			.copyright {
+				margin-bottom: 10px;
+			}
+			.misc {
+				width: 320px;
+				min-height: 60px;
+				// height: 100px;
+			}
+		}
+		.socials {
+			position: absolute;
+			top: 0;
+			left: 240px;
+		}
+	}
 }
