--- a/public/scss/home.scss
+++ b/public/scss/home.scss
@@ -20,6 +20,7 @@
 				width: 358px;
 				height: 358px;
 				margin-top: 43px;
+				padding-bottom: 50px;
 				background-color: #ffd972;
 				border-radius: 180px;
 				position: absolute;
