--- a/public/scss/create.scss
+++ b/public/scss/create.scss
@@ -140,10 +140,14 @@
 	.create-content {
 		.field-container {
 			width: 558px;
-
+			.recipe-name {
+				width: 558px;
+			}
 			.create-button {
-				margin: 150px auto;
-				margin-left: 70px;
+				width: 200px;
+				margin-top: 150px;
+				// margin: 150px auto;
+				// margin-left: 70px;
 				margin-bottom: 100px;
 			}
 			.enter {
@@ -166,6 +170,10 @@
 		.field-container {
 			width: 284px;
 
+			#recipe-name {
+				width: 284px;
+			}
+
 			.attach {
 				width: 92px;
 				height: 33px;
@@ -174,8 +182,9 @@
 				font-size: 12px;
 			}
 
-			.create-button {
-				margin: 150px auto;
+			#create-button {
+				margin-left: 0;
+				margin-top: 100px;
 				// margin-left: 50px;
 				margin-bottom: 100px;
 			}
@@ -189,6 +198,7 @@
 			.create-button {
 				width: 283px;
 				height: 52px;
+				margin: 0 auto;
 			}
 		}
 	}
