--- a/public/scss/footer.scss
+++ b/public/scss/footer.scss
@@ -1,8 +1,8 @@
 footer {
 	// position: absolute;
 	// width: 100%;
-	min-height: 60px;
-	margin-top: -70px;
+	// min-height: 60px;
+	margin-top: -120px;
 	// padding-bottom: 24px;
 
 	font-family: $font4;
@@ -145,14 +145,15 @@ footer {
 @media only screen and (max-width: 540px) {
 	footer {
 		// margin-bottom: 0;
-		position: fixed;
+
+		position: absolute;
 		padding-left: 50px;
 		.footer-container {
 			.copyright {
 				margin-bottom: 10px;
 			}
 			.misc {
-				width: 320px;
+				width: 280px;
 				min-height: 60px;
 				// height: 100px;
 			}
